--- a/package.json
+++ b/package.json
@@ -21,20 +21,21 @@
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^0.11.2",
+    "file-loader": "^1.1.6",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.4.2",
+    "node-sass": "^4.7.2",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.0.0",
-    "rimraf": "^2.6.2",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.10.0",
-    "node-sass": "^4.7.2",
-    "webpack-dev-server": "^2.9.5",
     "postcss-loader": "^2.0.9",
-    "sass-loader": "^6.0.6"
+    "resolve-url-loader": "^2.2.1",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.5"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
